examples/kubeflow-mlops/kubeflow-manifests/awsconfigs/common/aws-authservice/base/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aws-authservice
  namespace: istio-system
spec:
  type: ClusterIP
  selector:
    app: aws-authservice
  ports:
  - port: 8082
    name: aws-authservice
    targetPort: http-api
