examples/kubeflow-mlops/kubeflow-manifests/awsconfigs/common/aws-authservice/base/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authservice-web-cognito
spec:
  gateways:
    - kubeflow/kubeflow-gateway
  hosts:
    - '*'
  http:
    - match:
        - uri:
            prefix: /logout
      route:
        - destination:
            host: aws-authservice.istio-system.svc.cluster.local
            port:
              number: 8082
